--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "vant": "^2.12.1",
     "vuesax": "^4.0.1-alpha.25"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.1.0"
+  }
 }
